feature/GE-953: Update spec to reflect total header, add example of where to hook in header amount
