# swagger/access_control.yml
@@ -979,6 +979,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1057,6 +1061,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1151,6 +1159,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1251,6 +1263,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1316,6 +1332,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1386,6 +1406,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1477,6 +1501,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1563,6 +1591,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1650,6 +1682,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1720,6 +1756,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1798,6 +1838,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1878,6 +1922,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
@@ -1941,6 +1989,10 @@ paths:
       responses:
         '200':
           description: ''
+          headers:
+            X-Total-Count:
+                type: integer
+                description: Total object count.
           schema:
             type: array
             items:
