# swagger_server/__main__.py
@@ -9,6 +9,9 @@ from ge_core_shared import exception_handlers, middleware
 import project.app
 from swagger_server import encoder
 
+def response_handler(response):
+    response.headers["X-Total-Count"] = 100
+    return response
 
 DB = SQLAlchemy()
 
@@ -20,6 +23,7 @@ app.app.config = project.app.APP.config
 DB.init_app(app.app)
 app.add_error_handler(SQLAlchemyError, exception_handlers.db_exceptions)
 app.app.wsgi_app = middleware.AuthMiddleware(app.app.wsgi_app)
+app.app.after_request(response_handler)
 
 if __name__ == '__main__':
     app.run(port=8080)
